--- a/find.html
+++ b/find.html
@@ -85,7 +85,7 @@
           <h5 class="open-post__title">#BTS</h5>
           <h6 class="open-post__hashtags">#bts#army#friends</h6>
           <div class="open-post__members">
-            <img src="img/마다가스카.jpg" />
+            <img src="img/penguin.jpg" />
             <span class="open-post__member-count">802 members</span>
             <div class="divider"></div>
             <span class="open-post__member-status">Active</span>
