other penguin changes

--- a/friends.html
+++ b/friends.html
@@ -54,7 +54,7 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="img/마다가스카.jpg"
+            src="img/penguin.jpg"
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
